--- a/source/_navbar.html.erb
+++ b/source/_navbar.html.erb
@@ -16,27 +16,26 @@
     </form>
 
     <!-- Text link -->
-    <a href="https://www.lewagon.com" class="navbar-wagon-item navbar-wagon-link">Wagon</a>
-
+    <%=link_to "Wagon", "https://www.lewagon.com", class: "navbar-wagon-item navbar-wagon-link" %>
     <!-- Text link -->
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Team</a>
+    <%=link_to "Team", "/team.html", class: "navbar-wagon-item navbar-wagon-link" %>
 
     <!-- Notification link-->
-    <a href="" class="navbar-wagon-item navbar-wagon-link">
+    <% link_to "", class: "navbar-wagon-item navbar-wagon-link" do %>
       <div class="badge-container">
         <i class="fa fa-envelope-o"></i>
         <div class="badge badge-blue">3</div>
       </div>
-    </a>
+    <% end %>
 
     <!-- Profile picture and dropdown -->
     <div class="navbar-wagon-item">
       <div class="dropdown">
-        <img src="https://placehold.it/50x50" class="avatar dropdown-toggle" id="navbar-wagon-menu" data-toggle="dropdown">
+        <%= image_tag "https://placehold.it/50x50", id: "navbar-wagon-menu", class: "avatar dropdown-toggle", data: {toggle: "dropdown"} %>
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-          <li><a href="#">Profile</a></li>
-          <li><a href="#">Dashboard</a></li>
-          <li><a href="#">Log Out</a></li>
+          <li><%= link_to "Profile", "#" %></li>
+          <li><%= link_to "Dashboard", "#" %></li>
+          <li><%= link_to "Log Out", "#" %></li>
         </ul>
       </div>
     </div>
@@ -50,9 +49,9 @@
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">Some mobile link</a></li>
-        <li><a href="#">Other one</a></li>
-        <li><a href="#">Other one</a></li>
+        <li><%= link_to "Some mobile link", "#" %></li>
+        <li><%= link_to "Other one", "#" %>
+        <li><%= link_to "Other one", "#" %>
       </ul>
     </div>
   </div>
