--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,3 +8,503 @@ title: Le Wagon Middleman boilerplate
     <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
   </p>
 </div>
+
+
+
+    <!-- Your banner code -->
+    <div class="banner" style="background: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= image_path "background.jpg" %>)">
+      <div class="banner-content">
+        <h1>WELCOME HOME</h1>
+        <p>Rent unique places to stay from local hosts in 190+ countries.</p>
+        <div class="text-center padded" id="search-form">
+          <form action="#" class="form-inline">
+            <input type="checkin" class="form-control input-lg" placeholder="Checkin">
+            <input type="checkout" class="form-control input-lg" placeholder="Checkout">
+            <select class="form-control input-lg">
+              <option value="1">1 guest</option>
+              <option value="2">2 guests</option>
+              <option value="3">3 guests</option>
+            </select>
+            <input type="submit" value="search" class="btn btn-primary btn-bordered btn-bordered-primary btn-lg">
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <!-- Your features code -->
+  <div class="wrapper-white">
+    <div class="row">
+      <div class="text-center padded features">
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <%= image_tag "images/beer.png" %>
+            <h2>Discover the world</h2>
+          <p>The earth is your new home.</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-3">
+          <%= image_tag "images/dollar.png" %>
+          <h2>Pay online</h2>
+          <p>No cash issues anymore.</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-3">
+          <%= image_tag "images/globe.png" %>
+          <h2>Meet people</h2>
+          <p>Discover new culture and lifestyle.</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-3">
+          <%= image_tag "images/heart.png" %>
+          <h2>Share and love</h2>
+          <p>Join a community you will love.</p>
+          </div>
+      </div>
+    </div>
+  </div>
+
+    <!-- Your cards code -->
+    <div class="wrapper-grey">
+      <div class="container">
+        <h2 class="text-center">Your next trip</h2>
+        <div class="row">
+          <div class="col-xs-12 col-sm-4">
+            <div class="card" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= image_path "card-brussels.jpeg" %>)">
+              <div class="card-category">Brussels</div>
+              <div class="card-description">
+                <h2>Seb's home</h2>
+                <p>lovely house</p>
+              </div>
+                <% link_to "index.html", class: "card-link" do %>
+                  <%= image_tag "seb.jpg", class: "card-user avatar" %>
+                <% end %>
+          </div>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            <div class="card" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= image_path "card-paris.jpg" %>)">"
+              <div class="card-category">Paris</div>
+              <div class="card-description">
+                <h2>Anna's place</h2>
+                <p>pretty cool isn't it ?</p>
+              </div>
+                <% link_to "index.html", class: "card-link" do %>
+                    <%= image_tag "anne.jpg", class: "card-user avatar" %>
+                <% end %>
+          </div>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            <div class="card" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= image_path "card-london.jpeg" %>)">
+              <div class="card-category">London</div>
+            <div class="card-description">
+              <h2>Romain's place</h2>
+              <p>Best place ever</p>
+            </div>
+              <% link_to "index.html", class: "card-link" do %>
+                <%= image_tag "romain.jpeg", class: "card-user avatar" %>
+              <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Your newsletter code -->
+  <div class="text-center padded" id="newsletter">
+      <h2>Get news from us</h2>
+        <label>Leave us your mail and get news from us</label>
+        <form class="form-inline">
+        <input type="email" class="form-control" placeholder="bob@gmail.com">
+        <input type="submit" value="Subscribe" class="btn btn-primary btn-bordered btn-bordered-primary">
+      </form>
+    </div>
+
+    <!-- Your map code -->
+    <div id="map" style="width: 100%; height: 400px;"></div>
+
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+
+    <script type="text/javascript">
+    var myLatlng = new google.maps.LatLng(48.8655909, 2.378983);
+
+    var myOptions = {
+      zoom: 16,
+      center: myLatlng,
+      scrollwheel: false,
+      mapTypeId: google.maps.MapTypeId.ROADMAP,
+      styles: [
+                {
+              "featureType": "all",
+              "elementType": "all",
+              "stylers": [
+                  {
+                      "visibility": "on"
+                  }
+              ]
+          },
+          {
+              "featureType": "all",
+              "elementType": "labels",
+              "stylers": [
+                  {
+                      "visibility": "off"
+                  },
+                  {
+                      "saturation": "-100"
+                  }
+              ]
+          },
+          {
+              "featureType": "all",
+              "elementType": "labels.text.fill",
+              "stylers": [
+                  {
+                      "saturation": 36
+                  },
+                  {
+                      "color": "#000000"
+                  },
+                  {
+                      "lightness": 40
+                  },
+                  {
+                      "visibility": "off"
+                  }
+              ]
+          },
+          {
+              "featureType": "all",
+              "elementType": "labels.text.stroke",
+              "stylers": [
+                  {
+                      "visibility": "off"
+                  },
+                  {
+                      "color": "#000000"
+                  },
+                  {
+                      "lightness": 16
+                  }
+              ]
+          },
+          {
+              "featureType": "all",
+              "elementType": "labels.icon",
+              "stylers": [
+                  {
+                      "visibility": "off"
+                  }
+              ]
+          },
+          {
+              "featureType": "administrative",
+              "elementType": "geometry.fill",
+              "stylers": [
+                  {
+                      "color": "#000000"
+                  },
+                  {
+                      "lightness": 20
+                  }
+              ]
+          },
+          {
+              "featureType": "administrative",
+              "elementType": "geometry.stroke",
+              "stylers": [
+                  {
+                      "color": "#000000"
+                  },
+                  {
+                      "lightness": 17
+                  },
+                  {
+                      "weight": 1.2
+                  }
+              ]
+          },
+          {
+              "featureType": "landscape",
+              "elementType": "geometry",
+              "stylers": [
+                  {
+                      "color": "#000000"
+                  },
+                  {
+                      "lightness": 20
+                  }
+              ]
+          },
+          {
+              "featureType": "landscape",
+              "elementType": "geometry.fill",
+              "stylers": [
+                  {
+                      "color": "#4d6059"
+                  }
+              ]
+          },
+          {
+              "featureType": "landscape",
+              "elementType": "geometry.stroke",
+              "stylers": [
+                  {
+                      "color": "#4d6059"
+                  }
+              ]
+          },
+          {
+              "featureType": "landscape.natural",
+              "elementType": "geometry.fill",
+              "stylers": [
+                  {
+                      "color": "#4d6059"
+                  }
+              ]
+          },
+          {
+              "featureType": "poi",
+              "elementType": "geometry",
+              "stylers": [
+                  {
+                      "lightness": 21
+                  }
+              ]
+          },
+          {
+              "featureType": "poi",
+              "elementType": "geometry.fill",
+              "stylers": [
+                  {
+                      "color": "#4d6059"
+                  }
+              ]
+          },
+          {
+              "featureType": "poi",
+              "elementType": "geometry.stroke",
+              "stylers": [
+                  {
+                      "color": "#4d6059"
+                  }
+              ]
+          },
+          {
+              "featureType": "road",
+              "elementType": "geometry",
+              "stylers": [
+                  {
+                      "visibility": "on"
+                  },
+                  {
+                      "color": "#7f8d89"
+                  }
+              ]
+          },
+          {
+              "featureType": "road",
+              "elementType": "geometry.fill",
+              "stylers": [
+                  {
+                      "color": "#7f8d89"
+                  }
+              ]
+          },
+          {
+              "featureType": "road.highway",
+              "elementType": "geometry.fill",
+              "stylers": [
+                  {
+                      "color": "#7f8d89"
+                  },
+                  {
+                      "lightness": 17
+                  }
+              ]
+          },
+          {
+              "featureType": "road.highway",
+              "elementType": "geometry.stroke",
+              "stylers": [
+                  {
+                      "color": "#7f8d89"
+                  },
+                  {
+                      "lightness": 29
+                  },
+                  {
+                      "weight": 0.2
+                  }
+              ]
+          },
+          {
+              "featureType": "road.arterial",
+              "elementType": "geometry",
+              "stylers": [
+                  {
+                      "color": "#000000"
+                  },
+                  {
+                      "lightness": 18
+                  }
+              ]
+          },
+          {
+              "featureType": "road.arterial",
+              "elementType": "geometry.fill",
+              "stylers": [
+                  {
+                      "color": "#7f8d89"
+                  }
+              ]
+          },
+          {
+              "featureType": "road.arterial",
+              "elementType": "geometry.stroke",
+              "stylers": [
+                  {
+                      "color": "#7f8d89"
+                  }
+              ]
+          },
+          {
+              "featureType": "road.local",
+              "elementType": "geometry",
+              "stylers": [
+                  {
+                      "color": "#000000"
+                  },
+                  {
+                      "lightness": 16
+                  }
+              ]
+          },
+          {
+              "featureType": "road.local",
+              "elementType": "geometry.fill",
+              "stylers": [
+                  {
+                      "color": "#7f8d89"
+                  }
+              ]
+          },
+          {
+              "featureType": "road.local",
+              "elementType": "geometry.stroke",
+              "stylers": [
+                  {
+                      "color": "#7f8d89"
+                  }
+              ]
+          },
+          {
+              "featureType": "transit",
+              "elementType": "geometry",
+              "stylers": [
+                  {
+                      "color": "#000000"
+                  },
+                  {
+                      "lightness": 19
+                  }
+              ]
+          },
+          {
+              "featureType": "water",
+              "elementType": "all",
+              "stylers": [
+                  {
+                      "color": "#2b3638"
+                  },
+                  {
+                      "visibility": "on"
+                  }
+              ]
+          },
+          {
+              "featureType": "water",
+              "elementType": "geometry",
+              "stylers": [
+                  {
+                      "color": "#2b3638"
+                  },
+                  {
+                      "lightness": 17
+                  }
+              ]
+          },
+          {
+              "featureType": "water",
+              "elementType": "geometry.fill",
+              "stylers": [
+                  {
+                      "color": "#24282b"
+                  }
+              ]
+          },
+          {
+              "featureType": "water",
+              "elementType": "geometry.stroke",
+              "stylers": [
+                  {
+                      "color": "#24282b"
+                  }
+              ]
+          },
+          {
+              "featureType": "water",
+              "elementType": "labels",
+              "stylers": [
+                  {
+                      "visibility": "off"
+                  }
+              ]
+          },
+          {
+              "featureType": "water",
+              "elementType": "labels.text",
+              "stylers": [
+                  {
+                      "visibility": "off"
+                  }
+              ]
+          },
+          {
+              "featureType": "water",
+              "elementType": "labels.text.fill",
+              "stylers": [
+                  {
+                      "visibility": "off"
+                  }
+              ]
+          },
+          {
+              "featureType": "water",
+              "elementType": "labels.text.stroke",
+              "stylers": [
+                  {
+                      "visibility": "off"
+                  }
+              ]
+          },
+          {
+              "featureType": "water",
+              "elementType": "labels.icon",
+              "stylers": [
+                  {
+                      "visibility": "off"
+                  }
+              ]
+          }
+      ] // TODO: replace [] by array from https://snazzymaps.com/
+    };
+
+    var map = new google.maps.Map(document.getElementById('map'), myOptions);
+    var marker = new google.maps.Marker({
+      position: myLatlng,
+      map: map,
+      title: "You are here!"
+    });
+    </script>
+
+
+
+    <!-- Your footer code -->
+
+
+    <!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work -->
+
