--- a/source/stylesheets/components/_card.scss
+++ b/source/stylesheets/components/_card.scss
@@ -9,38 +9,31 @@
   text-shadow: 0 1px 3px rgba(0,0,0,0.6);
   background-repeat: no-repeat;
   margin-top: 20px;
-}
-
-.card-category {
+  &-category {
   position: absolute;
   top: 10px;
   left: 10px;
   font-size: 20px;
-}
-
-.card-description {
+  }
+  &-description {
   position: absolute;
   bottom: 10px;
   left: 10px;
-}
-
-.card-description h2 {
+    h2 {
   font-size: 22px;
   margin-bottom: 10px;
-}
-
-.card-description p {
+      }
+    p {
   font-size: 15px;
-}
-
-.card-user {
+    }
+  }
+  &-user {
   position: absolute;
   top: 10px;
   right: 10px;
   font-size: 22px;
-}
-
-.card-link {
+  }
+  &-link {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -48,8 +41,8 @@
   z-index: 2;
   background: black;
   opacity: 0;
-}
-
-.card-link:hover {
+  }
+  &-link:hover {
   opacity: 0.2;
+  }
 }
