new features added

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -64,7 +64,20 @@ title: Le Wagon Middleman boilerplate
       <div class="container">
         <h2 class="text-center">Your next trip</h2>
         <div class="row">
-          <div class="col-xs-12 col-sm-4">
+          <% data.flats.each do |owner, flat| %>
+            <div class="col-xs-12 col-sm-4">
+              <div class="card" style="background-image: url('<%= image_path flat.picture %>');">
+                <div class="card-category"><%= flat.city %></div>
+                <div class="card-description">
+                  <h2><%= flat.name %></h2>
+                  <p><%= flat.summary %></p>
+                </div>
+                <%= image_tag flat.owner_picture, class:"card-user avatar" %>
+                <%= link_to "#", "flats/#{owner}.html", class: "card-link" %>
+              </div>
+            </div>
+          <% end %>
+         <!--  <div class="col-xs-12 col-sm-4">
             <div class="card" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= image_path "card-brussels.jpeg" %>)">
               <div class="card-category">Brussels</div>
               <div class="card-description">
@@ -98,7 +111,7 @@ title: Le Wagon Middleman boilerplate
               <% link_to "index.html", class: "card-link" do %>
                 <%= image_tag "romain.jpeg", class: "card-user avatar" %>
               <% end %>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
